welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: ')' expected but symbol literal found.
    ecritMessage('compteur':String)
                          ^ColumnByColumn:7: error: ';' expected but ')' found.
    if (estFaceMur()){
                    ^ColumnByColumn:15: error: ')' expected but symbol literal found.
  ecritMessage('compteur':String)
                        ^